--- a/Shared (Extension)/Resources/popup.css
+++ b/Shared (Extension)/Resources/popup.css
@@ -3,11 +3,12 @@
 }
 
 body {
-    width: 100px;
-    padding: 10px;
-
     font-family: system-ui;
-    text-align: center;
+    width: max-content;
+}
+
+.content {
+    padding: 10px;
 }
 
 @media (prefers-color-scheme: dark) {
